@@ -65,6 +65,7 @@ exportMethods(update)
 exportMethods(vcov)
 import(doParallel)
 import(foreach)
+import(methods)
 import(parallel)
 importFrom(Matrix,nnzero)
 importFrom(Matrix,sparseMatrix)
@@ -75,7 +76,6 @@ importFrom(coda,is.mcmc)
 importFrom(coda,mcmc)
 importFrom(coda,mcmc.list)
 importFrom(coda,raftery.diag)
-importFrom(coda,read.coda)
 importFrom(coda,thin)
 importFrom(digest,digest)
 importFrom(foreign,read.dta)
@@ -90,21 +90,14 @@ importFrom(graphics,screen)
 importFrom(graphics,split.screen)
 importFrom(graphics,text)
 importFrom(lattice,Rows)
-importFrom(lattice,densityplot)
-importFrom(lattice,histogram)
 importFrom(lattice,panel.abline)
 importFrom(lattice,panel.grid)
 importFrom(lattice,panel.segments)
 importFrom(lattice,panel.xyplot)
 importFrom(lattice,qqmath)
 importFrom(lattice,trellis.par.get)
-importFrom(lattice,trellis.par.set)
 importFrom(lattice,xyplot)
 importFrom(memisc,getSummary)
-importFrom(methods,is)
-importFrom(methods,new)
-importFrom(methods,show)
-importFrom(methods,validObject)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
@@ -139,16 +132,16 @@ importFrom(stats,start)
 importFrom(stats,terms)
 importFrom(stats,terms.formula)
 importFrom(stats,update)
-importFrom(stats,update.formula)
 importFrom(stats,var)
 importFrom(stats,vcov)
 importFrom(stats,window)
-importFrom(stats4,coef)
-importFrom(stats4,logLik)
-importFrom(stats4,summary)
-importFrom(stats4,update)
-importFrom(stats4,vcov)
-importFrom(texreg,extract)
 importFrom(utils,citation)
 importFrom(utils,read.delim)
 importFrom(utils,stack)
+importMethodsFrom(stats4,coef)
+importMethodsFrom(stats4,logLik)
+importMethodsFrom(stats4,show)
+importMethodsFrom(stats4,summary)
+importMethodsFrom(stats4,update)
+importMethodsFrom(stats4,vcov)
+importMethodsFrom(texreg,extract)
