@@ -4,18 +4,24 @@
 #' software package, allowing users to fit multilevel models using
 #' MLwiN (and also WinBUGS / OpenBUGS) from within the R environment.
 #'
+#' @import methods
+#' @import doParallel foreach parallel
 #' @importFrom R2WinBUGS bugs
-#' @importFrom coda mcmc mcmc.list as.mcmc.list read.coda effectiveSize raftery.diag thin is.mcmc
-#' @importFrom lattice histogram densityplot xyplot qqmath Rows trellis.par.get trellis.par.set panel.xyplot panel.grid panel.abline panel.segments
+#' @importFrom coda mcmc mcmc.list as.mcmc.list effectiveSize raftery.diag thin is.mcmc
+#' @importFrom lattice xyplot qqmath Rows trellis.par.get panel.xyplot panel.grid panel.abline panel.segments
 #' @importFrom foreign read.dta write.dta
 #' @importFrom digest digest
-#' @importFrom methods show
-#' @importFrom texreg extract
-#' @importFrom memisc getSummary
-#' @importFrom stats4 coef logLik summary vcov update
-#' @importFrom stats formula
+#' @importMethodsFrom stats4 coef logLik summary vcov update show
+#' @importFrom stats coef coefficients logLik vcov update df.residual fitted fitted.values residuals resid predict deviance nobs
+#' @importFrom stats acf pacf
+#' @importFrom stats formula as.formula get_all_vars model.frame model.matrix model.offset terms terms.formula
+#' @importFrom stats cov density end getCall na.omit pnorm qnorm quantile sd start var window complete.cases reshape
 #' @importFrom Matrix nnzero sparseMatrix
-#' @importFrom utils citation
+#' @importFrom utils citation read.delim stack
+#' @importFrom grDevices dev.new
+#' @importFrom graphics close.screen lines par plot points screen split.screen text
+#' @importMethodsFrom texreg extract
+#' @importFrom memisc getSummary
 #' 
 #' @section New features in version 0.8-3:
 #' Support for model comparison tables via \code{\link[texreg]{texreg-package}} and \code{\link[memisc]{memisc-package}} have been
