@@ -3,6 +3,7 @@ Wed Feb 26 2020
    * Update @S3method to @exportS3Method to reflect changes in roxygen2 version 7.
    * Ensure functions called from other packages are prefixed with a namespace
    * Explicitly check for and load packages used in the demos
+   * Only import functions used from other packages, rather than loading the whole package
 
 Wed Jun 26 2019
 1. Bug fixing
